playbooks/files/centos-infra/networking.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sf
    run: gateway
  managedFields:
  name: gateway
spec:
  host: gateway-cloud-softwarefactory.apps.ocp.cloud.ci.centos.org
  to:
    kind: Service
    name: gateway
    weight: 100
  port:
    targetPort: gateway-8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sf
    run: zookeeper
  name: zookeeper-lb
spec:
  ports:
    - name: zookeeper-2281
      port: 2281
      protocol: TCP
      targetPort: 2281
  selector:
    statefulset.kubernetes.io/pod-name: zookeeper-0
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sf
    run: git-server
  name: git-server-ro-lb
spec:
  ports:
    - name: git-server-port-9418
      port: 9418
      protocol: TCP
      targetPort: 9418
  selector:
    statefulset.kubernetes.io/pod-name: git-server-0
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "900"
  labels:
    app: sf
    run: logserver
  name: logserver-lb
spec:
  ports:
    - name: logserver-2222
      port: 2222
      protocol: TCP
      targetPort: 2222
  selector:
    statefulset.kubernetes.io/pod-name: logserver-0
  type: LoadBalancer
